--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <td>
                 <ul>
 
-                    <li><a href="./css tasks/t1.html">Task1</a></li>
-                    <li><a href="./css tasks/t2.html">Task2</a></li>
-                    <li><a href="./css tasks/t3.html">Task3</a></li>
-                    <li><a href="css tasks/t4.html">Task4</a></li>
-                    <li><a href="./css tasks/t5.html">Task5</a></li>
-                    <li><a href="./css tasks/t6.html">Task6</a></li>
-                    <li><a href="./css tasks/t7.html">Task7</a></li>
+                    <li><a href="./t1.html">Task1</a></li>
+                    <li><a href="./t2.html">Task2</a></li>
+                    <li><a href="./t3.html">Task3</a></li>
+                    <li><a href="./t4.html">Task4</a></li>
+                    <li><a href="./t5.html">Task5</a></li>
+                    <li><a href="./t6.html">Task6</a></li>
+                    <li><a href="./t7.html">Task7</a></li>
 
                 </ul>
             </td>
